--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter 
   flutter_svg: ^0.17.4
   keyboard_visibility: ^0.5.6
+  upi_pay: ^0.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
